--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "file-saver": "^2.0.5",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
