--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "draftjs-to-html": "^0.9.1",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
+    "rc-tabs": "^12.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
