--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.2",
     "@ckeditor/ckeditor5-build-classic": "^36.0.1",
+    "@ckeditor/ckeditor5-export-word": "^39.0.2",
     "@ckeditor/ckeditor5-react": "^5.1.0",
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
