--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "file-saver": "^2.0.5",
+    "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "rc-tabs": "^12.10.0",
     "react": "^18.2.0",
